# sf-edu-gh-actions

./: README.md  pyproject.toml
.github/workflows/: static_checks.yaml  tests.yaml
app/: main.py
tests/: conftest.py  test_main.py
